--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "body-parser": "^1.17.2",
     "debug": "^4.3.4",
     "express": "^4.18.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^7.4.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
